fixed contact us page spacing alignment

--- a/src/components/ContactUs/styles.module.css
+++ b/src/components/ContactUs/styles.module.css
@@ -1,3 +1,7 @@
+.contactUs {
+  padding-block: 3rem;
+}
+
 .subBtn {
   background-color: #14a8ff;
   border-color: #14a8ff;
